--- a/config
+++ b/config
@@ -2,3 +2,4 @@ keybind = ctrl+insert=copy_to_clipboard
 keybind = shift+insert=paste_from_clipboard
 keybind = ctrl+r>c=reload_config
 font-family = ComicCode Nerd Font
+theme = tokyonight
